added build dir

--- a/first_lesson/test/CMakeLists.txt
+++ b/first_lesson/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
 
-project (first_lesson)
+project ("first lesson")
 enable_testing()
 add_executable(first_lesson Test_helloworld.c ../../Unity/src/unity.c)
