added files for test framework, made necessary changes in CMakeLists.txt

--- a/first_lesson/CMakeLists.txt
+++ b/first_lesson/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SRC_DIR src)
 set(TEST_DIR test)
 set(MAIN_DIR ./..)
 set(BUILD_DIR build)
-set(UNITY_SOURCE_DIR ../Unity/src)
+set(UNITY_SOURCE_DIR ../unity_test_framework)
 
 # create/find the required libraries
 add_library(unity STATIC ${UNITY_SOURCE_DIR}/unity.c)
